i made changes in (schedule,school profile,footer) footers

--- a/projet-p/footer.html
+++ b/projet-p/footer.html
@@ -14,7 +14,7 @@
     <footer class="footer">
      
             <div class="divs-c-l"> 
-                <h3>OUR SERVICES
+                <h3 id="services-title">OUR SERVICES
                 </h3><ul>           
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Help</a></li>
@@ -29,7 +29,7 @@
                 <button class="button-footer">JOIN US</button>
               </ul></div>
               <div> 
-                <h3>CONTACT US</h3>
+                <h3 id="contact-us">CONTACT US</h3>
                 <div class="icons">    
               <i class="fab fa-facebook" ></i>
              <i class="fab fa-twitter" ></i>
