--- a/student_regist.html
+++ b/student_regist.html
@@ -30,8 +30,24 @@
                 <input type="email" id="email" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" title="Please enter a valid email address" required>
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" pattern="[a-zA-Z0-9]{8,}" title="Please match the password pattern: minimum 8 characters, alphanumeric only" required>
+                <label for="subject">Subject:</label>
+                <select id="subject" name="subject" required>
+                    <option value="Math">Math</option>
+                    <option value="Physics">Physics</option>
+                    <option value="Science">Experimental sciences</option>
+                    <option value="Arabic">Arabic</option>
+                    <option value="English">English</option>
+                    <option value="French">French</option>
+                    <option value="Philosophy">Philosophy</option>
+                    <option value="His/Geo">His/Geo</option>
+                    <option value="Islamic sciences">Islamic sciences</option>
+                    <option value="German">German</option>
+                    <option value="Spanish">Spanish</option>
+                    <option value="Civil Engineering">Civil Engineering</option>
+                    <option value="Mechanical Engineering">Mechanical Engineering</option>
+                    <option value="Electrical Engineering">Electrical Engineering</option>
+                    
+                </select>
             </div>
             <button type="submit">Register</button>
         </form>
