--- a/school - Copie/index.html
+++ b/school - Copie/index.html
@@ -85,7 +85,7 @@
                 <i class="fab fa-facebook" ></i>
                 <i class="fab fa-twitter" ></i>
                 <i class="fab fa-instagram" ></i>
-                <i class="fab fa-linkedin" ></i>
+                <i class="fa fa-envelope" ></i>
                </div>
               </div>
        </footer>
