--- a/teachers section/index.html
+++ b/teachers section/index.html
@@ -126,7 +126,7 @@
                 <i class="fab fa-facebook" ></i>
                 <i class="fab fa-twitter" ></i>
                 <i class="fab fa-instagram" ></i>
-                <i class="fab fa-linkedin" ></i>
+                <i class="fa fa-envelope" ></i>
                </div></div>
        </footer>
    
