--- a/admin.html
+++ b/admin.html
@@ -62,9 +62,9 @@
 
        
         <div class="right-side">
-            <img src="icon1.png" alt="Icon 1">
-            <img src="icon2.png" alt="Icon 2">
-            <img src="icon3.png" alt="Icon 3">
+            <img src="computer0.gif" alt="Icon 1">
+            <img src="curved-arrow-with-broken-line (1).png" alt="Icon 2">
+            <img src="question0.gif" alt="Icon 3">
            
         </div>
     </div>
