--- a/registration.html
+++ b/registration.html
@@ -64,7 +64,7 @@
             <textarea id="description" name="description" rows="4" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="200" required></textarea>
         </div>
         <div class="form-group">
-            <button type="submit">Register</button>
+            <a href="popup.html"><button type="submit">Register</button></a>
         </div>
     </form>
 </div>
