--- a/projet-p/schedule.html
+++ b/projet-p/schedule.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nav-bar</title>
+    <title>schedule</title>
     <link rel="stylesheet" href="schedule.css" />
     <link
       rel="stylesheet"
