--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,7 @@
           You will receive a confirmation once your account is activated.
         </div>
         <div class="dismiss-btn">
-          <button id="dismiss-popup-btn">
+          <a href="index.html"></a><button id="dismiss-popup-btn"></a>
             Dismiss
           </button>
         </div>
