--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           Please select your role:
         </div>
         <div class="buttons">
-            <button id="student-btn">Student</button>
-            <button id="school-manager-btn">School Manager</button>
+            <a href="sign in page/index.html"><button id="student-btn">Student</button></a>
+            <a href="registration.html"> <button id="school-manager-btn">School Manager</button></a>
         </div>
     </div>
 
