--- a/registration.html
+++ b/registration.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Registration Form</title>
 <link rel="stylesheet" href="registration.css">
+<link rel="stylesheet" href="popup.css">
+<script src="popup.js"></script>
 </head>
 <body>
 
@@ -64,7 +66,25 @@
             <textarea id="description" name="description" rows="4" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="200" required></textarea>
         </div>
         <div class="form-group">
-            <button type="submit">Register</button>
+            <button id="open-popup-btn"  type="submit" disabled>Register</button>
+            <div class="popup center">
+                <div class="icon">
+                  <i class="fa fa-check"></i>
+                </div>
+                <div class="title">
+                  Success!!
+                </div>
+                <div class="description">
+                  Registration submitted successfully!
+                  <br>Pending admin approval. 
+                  You will receive a confirmation once your account is activated.
+                </div>
+                <div class="dismiss-btn">
+                  <button id="dismiss-popup-btn">
+                    Dismiss
+                  </button>
+                </div>
+            </div>
         </div>
     </form>
 </div>
@@ -149,5 +169,6 @@ const months = [
 
 
 </script>
+<script src="registration.js"></script>
 </body>
 </html>
