--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           Please select your role:
         </div>
         <div class="buttons">
-            <a href="sign in page/index.html"><button id="student-btn">Student</button></a>
+            <a href="sign in page/indexs.html"><button id="student-btn">Student</button></a>
             <a href="registration.html"> <button id="school-manager-btn">School Manager</button></a>
         </div>
     </div>
