--- a/sign in page/indexs.html
+++ b/sign in page/indexs.html
@@ -19,7 +19,7 @@
         <li><a class="sidebarr" href="#">HOME</a></li>
         <li><a class="sidebarr" href="#">about</a></li>
         <li><a class="sidebarr" href="/teachers section/index.html">Contact</a></li>
-        <li><a class="sidebarr" href="/sing in page/index.html">Join Us</a></li>
+        <li><a class="sidebarr" href="/sing in page/indexs.html">Join Us</a></li>
       </ul>
     </nav>
     <nav>
