--- a/ecole-profile.html
+++ b/ecole-profile.html
@@ -44,17 +44,17 @@
             <h4> School Name:</h4>
             <h4>Contact:</h4>
             <h4>Localisation:</h4>
-            <a href="/student_regist.html"><button class="Inscription">Inscription</button></a>
+            <a href="student_regist.html"><button class="Inscription">Inscription</button></a>
 
           </div>
         </div>
         <div class="info-c">
       <div class="button-content">
         <button class="content-a">SUBJECTS ></button>
-        <a href="schedule.html"><button class="content-b">SCHEDULE ></button></a>
+        <button class="content-b">SCHEDULE ></button>
     </div>
     <div class="button-content">
-        <a href="/teachers section/indext.html"><button class="content-c">TEACHERS ></button></a>
+        <a href="teachers section/indext.html"><button class="content-c">TEACHERS ></button></a>
         <button class="content-d">REVIEWS ></button>
     </div>
     </div>    
