--- a/student_regist.html
+++ b/student_regist.html
@@ -12,7 +12,7 @@
         <form id="registration-form">
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="50" required>
+                <input type="text" id="name" name="name" pattern="[A-Za-z ]+" title="Please enter only alphabetic characters" maxlength="50" required>
             </div>
             <div class="form-group">
                 <label for="birthdate">Birthdate:</label>
@@ -49,8 +49,15 @@
                     
                 </select>
             </div>
-            <button type="submit">Register</button>
+            <button type="submit" id="registerButton">Register</button>
         </form>
     </div>
+    <script>
+        document.getElementById('registration-form').addEventListener('submit', function(event) {
+    event.preventDefault();
+    window.location.href = 'student_search.html'; 
+});
+
+    </script>
 </body>
 </html>
