--- a/school - Copie/index.html
+++ b/school - Copie/index.html
@@ -45,7 +45,7 @@
   <div class="info-c">
       <div class="button-content">
         <button class="content-a">SUBJECTS ></button>
-        <button class="content-b">SCHEDULE ></button>
+        <a href="/schedule.html"><button class="content-b">SCHEDULE ></button></a>
     </div>
     <div class="button-content">
         <button class="content-c">TEACHERS ></button>
