--- a/sign in/index.html
+++ b/sign in/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login page / animated</title>
-    <link rel="stylesheet" href="staylr.css" />
+    <link rel="stylesheet" href="sign.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
