--- a/projet-p/schedule.html
+++ b/projet-p/schedule.html
@@ -24,7 +24,7 @@
     </nav>
     <nav>
 
-      <label class="logo"><img src="edulinklogo.png" alt="" /></label>
+      <label class="logo"><img src="/edulink0.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile" class="active" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
