--- a/schedule.html
+++ b/schedule.html
@@ -24,7 +24,7 @@
     </nav>
     <nav>
 
-      <label class="logo"><img src="edulinklogo.png" alt="" /></label>
+      <label class="logo"><img src="/edulink0.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile" class="active" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <section>
-      <div class="title">  <h1>SCHEDULE SECTION</h1>
+      <div class="title">  <h1>Schedule Section</Section></h1>
         <p>Find you path, navigate with schedules</p>
         <div class="line-wrapper">
             <div class="line"></div>
