--- a/projet-p/ecole-profile.html
+++ b/projet-p/ecole-profile.html
@@ -24,7 +24,7 @@
     </nav>
     <nav>
 
-      <label class="logo"><img src="edulinklogo.png" alt="" /></label>
+      <label class="logo"><img src="/edulink0.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile" class="active" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -50,12 +50,12 @@
         </div>
         <div class="info-c">
       <div class="button-content">
-        <button class="content-a">SUBJECTS ></button>
-        <a href="schedule.html"><button class="content-b">SCHEDULE ></button></a>
+        <button class="content-a"><span>REPORT ></span></button>
+        <a href="schedule.html"><button class="content-b"><span>SCHEDULE ></span></button></a>
     </div>
     <div class="button-content">
-        <a href="/teachers section/indext.html"><button class="content-c">TEACHERS ></button></a>
-        <button class="content-d">REVIEWS ></button>
+        <a href="/teachers section/index.html"><button class="content-c"><span>TEACHERS ></span></button></a>
+        <button class="content-d"><span>COMMENTS ></span></button>
     </div>
     </div>    
     </div>
