updates (unfinished work f student_regis)

--- a/index.html
+++ b/index.html
@@ -112,55 +112,51 @@
         </svg>
 </section>
 
-<section class="popular-school" style="margin-top: auto;">
+<section class="popular-school">
     <h2 class="section-title">Explore Our Popular Schools</h2>
     <div class="school-container">
-        <div class="school">
-            <img src="school1.jpg" alt="School 1">
+        <div class="school" data-name="School Name 1" data-description="Description of School 1">
+            <img src="OIP.jpg" alt="School 1">
+            <h3>School Name 1</h3>
             <div class="school-details">
-                <h3>School Name 1</h3>
-                <p>Description of the school.</p>
-                <div class="rating">
-                    <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9734;</span>
-                </div>
                 <button class="view-details">View Details</button>
+                <div class="rating hidden">
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9734;</span>
+                </div>
             </div>
         </div>
         
-        <div class="school">
-            <!-- School 2 content -->
-            <img src="school1.jpg" alt="School 2">
+        <div class="school" data-name="School Name 2" data-description="Description of School 2">
+            <img src="school2.jpg" alt="School 2">
+            <h3>School Name 2</h3>
             <div class="school-details">
-                <h3>School Name 2</h3>
-                <p>Description of the school.</p>
-                <div class="rating">
-                    <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9734;</span>
-                </div>
                 <button class="view-details">View Details</button>
+                <div class="rating hidden">
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9734;</span>
+                </div>
             </div>
         </div>
-        <div class="school">
-            <!-- School 3 content -->
-            <img src="school1.jpg" alt="School 3">
+        
+        <div class="school" data-name="School Name 3" data-description="Description of School 3">
+            <img src="school3.jpg" alt="School 3">
+            <h3>School Name 3</h3>
             <div class="school-details">
-                <h3>School Name 3</h3>
-                <p>Description of the school.</p>
-                <div class="rating">
-                    <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9734;</span>
-                </div>
                 <button class="view-details">View Details</button>
+                <div class="rating hidden">
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9734;</span>
+                </div>
             </div>
         </div>
     </div>
