--- a/projet-p/ecole-profile.html
+++ b/projet-p/ecole-profile.html
@@ -50,8 +50,8 @@
         </div>
         <div class="info-c">
       <div class="button-content">
-        <button class="content-a"><span>REPORT ></span></button>
-        <a href="schedule.html"><button class="content-b"><span>SCHEDULE ></span></button></a>
+        <a href="/report.html"><button class="content-a"><span>REPORT ></span></button></a>
+        <a href="/schedule-s.html"><button class="content-b"><span>SCHEDULE ></span></button></a>
     </div>
     <div class="button-content">
         <a href="/teachers section/index.html"><button class="content-c"><span>TEACHERS ></span></button></a>
