--- a/registration.html
+++ b/registration.html
@@ -20,32 +20,7 @@
             <label for="family-name">Family Name:</label>
             <input type="text" id="family-name" name="family-name" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="25" required>
         </div>
-        <div class="form-group">
-            <label for="date-of-birth">Date Of Birth:</label>
-            
-              <div class="scrollable-select">
-                <select id="day" name="day" required>
-                  <option value="" disabled selected>Day</option>
-                  <!-- JavaScript will do the job  -->
-                </select>
-              </div>
-
-              <!-- Month select -->
-             <div class="scrollable-select">
-               <select id="month" name="month" required>
-                 <option value="" disabled selected>Month</option>
-               </select>
-              </div>
-  
-             <!-- Year select -->
-             <div class="scrollable-select">
-               <select id="year" name="year" required>
-                 <option value="" disabled selected>Year</option>
-               </select>
-            </div>
-  
-
-        </div>
+        
         <div class="form-group">
             <label for="state">State:</label>
             <input type="text" id="state" name="state" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="20" required>
@@ -61,8 +36,8 @@
         <div class="form-group">
             <label for="school-name">School Name:</label>
             <input type="text" id="school-name" name="school-name" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="50" required>
-            <label for="description">Brief Description:</label>
-            <textarea id="description" name="description" rows="4" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="200" required></textarea>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" minlength="6" title="Password must be at least 6 characters long" required>
         </div>
         <div class="form-group">
             <button id="open-popup-btn"  type="submit" disabled>Register</button>
@@ -88,86 +63,6 @@
     </form>
 </div>
 
-
-<script>
-    const daySelect = document.getElementById("day");
-
-for (let i = 1; i <= 31; i++) {
-  const option = document.createElement("option");
-  option.text = i < 10 ? "0" + i : i;
-  option.value = i < 10 ? "0" + i : i;
-  daySelect.add(option);
-}
-
-const monthSelect = document.getElementById("month");
-const yearSelect = document.getElementById("year");
-
-//for months
-const months = [
-        "January", "February", "March", "April",
-        "May", "June", "July", "August",
-        "September", "October", "November", "December"
-    ];
-
-    months.forEach((month, index) => {
-        const option = document.createElement("option");
-        option.text = month;
-        option.value = index + 1 < 10 ? "0" + (index + 1) : (index + 1);
-        monthSelect.add(option);
-    });
-
-    // for years
-    const currentYear = new Date().getFullYear();
-    const yearsRange = 60; // gdah men year available 
-
-    for (let i = currentYear; i >= currentYear - yearsRange; i--) {
-        const option = document.createElement("option");
-        option.text = i;
-        option.value = i;
-        yearSelect.add(option);
-    }
-
-    // Function to update the number of days based on the selected month and year
-    function updateDays() {
-        const selectedMonth = parseInt(monthSelect.value);
-        const selectedYear = parseInt(yearSelect.value);
-        const daySelect = document.getElementById("day");
-        daySelect.innerHTML = ""; // Clear existing options ida ghlet yaeni
-
-        let daysInMonth;
-        switch (selectedMonth) {
-            case 2: // February
-                daysInMonth = (selectedYear % 4 === 0 && (selectedYear % 100 !== 0 || selectedYear % 400 === 0)) ? 29 : 28; //ida kant leap year wla la
-                break;
-            case 4: // April
-            case 6: //ect
-            case 9: 
-            case 11: 
-                daysInMonth = 30;
-                break;
-            default:
-                daysInMonth = 31;
-                break;
-        }
-
-        // Generate day options
-        for (let i = 1; i <= daysInMonth; i++) {
-            const option = document.createElement("option");
-            option.text = i < 10 ? "0" + i : i;
-            option.value = i < 10 ? "0" + i : i;
-            daySelect.add(option);
-        }
-    }
-
-    // Update days when month or year changes koul month w yamatou (year)
-    monthSelect.addEventListener("change", updateDays);
-    yearSelect.addEventListener("change", updateDays);
-
-    // Initialize days based on the current month and year
-    updateDays();
-
-
-</script>
 <script src="registration.js"></script>
 </body>
 </html>
