all icon logins

--- a/signin/index.html
+++ b/signin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login page / animated</title>
-    <link rel="stylesheet" href="sign.css" />
+    <link rel="stylesheet" href="/signin/sign.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -23,7 +23,7 @@
       </ul>
     </nav>
     <nav>
-      <label class="logo"><img src="edulink3.png" alt="" /></label>
+      <label class="logo"><img src="/signin/edulink3.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile"  href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -40,9 +40,9 @@
         <form id="signup-form" action="/student/register" method="POST">
           <h1>Creat Account</h1>
           <div class="social-icons">
-            <a href="" class="icon"><i class="fa-brands fa-google"></i></a>
-            <a href="" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="/auth/google"  id="google-auth-btn" class="icon"><i class="fa-brands fa-google"></i></a>
+            <a href="/auth/facebook" id="facebook-auth-btn"-auth-btn" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="/auth/linkedin" id="linked-auth-btn" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
           <span> use your email for registation</span>
 
@@ -67,9 +67,9 @@
           
           <h1>Log In</h1>
           <div class="social-icons">
-            <a href=" " class="icon"><i class="fa-brands fa-google"></i></a>
-            <a href=" " class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href=" " class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="/auth/google" id="google-auth-btn" class="icon"><i class="fa-brands fa-google"></i></a>
+            <a href="/auth/facebook" id="facebook-auth-btn" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="/auth/linkedin" id="linked-auth-btn" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
           <span> use your e-mail </span>
 
@@ -99,7 +99,7 @@
       </div>
     </div>
   
-    <script src="script.js">
+    <script src="/signin/script.js">
 
   const signupForm = document.getElementById('signup-form');
   const loginForm = document.getElementById('login-form');
@@ -141,6 +141,30 @@
       // Handle success or error responses from the backend
     })
     .catch(error => console.error('Error:', error));
+  });
+  // Get the Google authentication button element
+  const googleAuthBtn = document.getElementById('google-auth-btn');
+
+  // Add click event listener to the Google authentication button
+  googleAuthBtn.addEventListener('click', function() {
+    // Redirect the user to /auth/google
+    window.location.href = '/auth/google';
+  });
+  //Get the Facebook authentication button element
+  const facebookAuthBtn = document.getElementById('facebook-auth-btn');
+
+  // Add click event listener to the Facebook authentication button
+  facebookAuthBtn.addEventListener('click', function() {
+    // Redirect the user to /auth/facebook
+    window.location.href = '/auth/facebook';
+  });
+  //Get the linkedin authentication button element
+  const linkedinAuthBtn = document.getElementById('linkedin-auth-btn');
+
+  // Add click event listener to the Facebook authentication button
+  linkedinAuthBtn.addEventListener('click', function() {
+    // Redirect the user to /auth/facebook
+    window.location.href = '/auth/linkedin';
   });
     </script>
   </body>
