--- a/registration.html
+++ b/registration.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,59 +9,78 @@
 <script src="popup.js"></script>
 </head>
 <body>
+
+    <nav>
+        <ul>
+            <li onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+            <li><a class="sidebarr" href="#">HOME</a></li>
+            <li><a class="sidebarr" href="">Contact</a></li>
+            <li><a class="sidebarr" href="/school-login.html">Login</a></li>
+          </ul>
+        </nav>
+        <nav>
+          <label class="logo"><img src="edulink0.png" alt="" /></label>
+          <ul>
+            <li><a class="hideOnMobile"  href="#">HOME</a></li>
+            <li><a  class="hideOnMobile" href="">Contact</a></li>
+            <li><a class="hideOnMobile " href="/school-login.html">Login</a></li>
+            <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+          </ul>
+        </nav>
+
 <div class="container">
     <h1>Registration</h1>
     <div class="subtitle">Fill your details for registration</div>
-    <form action="#" method="post">
-        <div class="form-group">
-            <label for="first-name">First Name:</label>
-            <input type="text" id="first-name" name="first-name" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="25" required />
-            <label for="family-name">Family Name:</label>
-            <input type="text" id="family-name" name="family-name" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="25" required>
-        </div>
+    <form action="http://127.0.0.1:3000/inscrit-school" method="post">
+        
+          <div class="form-group">
+            <label for="firstName">First Name:</label>
+            <input type="text" id="firstName" name="firstName" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="25" required />
+            <label for="lastName">Family Name:</label>
+            <input type="text" id="lastName" name="lastName" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="25" required>
+        </div> 
         
         <div class="form-group">
-            <label for="state">State:</label>
-            <input type="text" id="state" name="state" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="20" required>
-            <label for="address">Full Address:</label>
-            <textarea id="address" name="address" rows="4" pattern="[a-zA-Z0-9\s,'.-]+" title="Please enter a valid address" required></textarea>
+            <label for="statesch">State:</label>
+            <input type="text" id="statesch" name="statesch" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="20" required>
+            <label for="adresssch">Full Address:</label>
+            <textarea id="adresssch" name="adresssch" rows="4" pattern="[a-zA-Z0-9\s,'.-]+" title="Please enter a valid address" required></textarea>
         </div>
         <div class="form-group">
-            <label for="email">Your E-mail:</label>
-            <input type="email" id="email" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" title="Please enter a valid email address" required>
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" pattern="0[5-7|2][0-9]{8}" title="Please enter a valid phone number" required>
+            <label for="emailsch">Your E-mail:</label>
+            <input type="email" id="emailsch" name="emailsch" title="Please enter a valid email address" required>
+            <label for="numbersch">Phone Number:</label>
+            <input type="text" id="numbersch" name="numbersch" pattern="0[5-7|2][0-9]{8}" title="Please enter a valid phone number" required>
         </div>
         <div class="form-group">
-            <label for="school-name">School Name:</label>
-            <input type="text" id="school-name" name="school-name" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="50" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" minlength="6" title="Password must be at least 6 characters long" required>
+            <label for="namesch">School Name:</label>
+            <input type="text" id="namesch" name="namesch" pattern="[A-Za-z]+" title="Please enter only alphabetic characters" maxlength="50" required>
+            <label for="passwordsch">Password:</label>
+            <input type="password" id="passwordsch" name="passwordsch" required>
         </div>
         <div class="form-group">
-            <button id="open-popup-btn"  type="submit" disabled>Register</button>
-            <div class="popup center">
-                <div class="icon">
-                  <i class="fa fa-check"></i>
-                </div>
-                <div class="title">
-                  Success!!
-                </div>
-                <div class="description">
-                  Registration submitted successfully!
-                  <br>Pending admin approval. 
-                  You will receive a confirmation once your account is activated.
-                </div>
-                <div class="dismiss-btn">
-                  <button id="dismiss-popup-btn">
-                    Dismiss
-                  </button>
-                </div>
-            </div>
-        </div>
+          <button  type="submit" >Register</button>
+          <div class="popup center">
+              <div class="icon">
+                <i class="fa fa-check"></i>
+              </div>
+              <div class="title">
+                Success!!
+              </div>
+              <div class="description">
+                Registration submitted successfully!
+                <br>Pending admin approval. 
+                You will receive a confirmation once your account is activated.
+              </div>
+              <div class="dismiss-btn">
+                <button id="dismiss-popup-btn">
+                  Dismiss
+                </button>
+              </div>
+          </div>
+      </div>
     </form>
 </div>
 
-<script src="registration.js"></script>
 </body>
 </html>
