--- a/school - Copie/index.html
+++ b/school - Copie/index.html
@@ -12,46 +12,62 @@
 </head>
 <body>
 
-<section>
-    <nav class="sidebar">
-      <ul>
-        <li onclick=hideSidebar()><a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
-        <li><a  href="#">HOME</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a class="" href="#">Log Out</a></li>
-      </ul>
-    </nav>
-    <nav>
 
-      <label class="logo"><img src="edulink3.png" alt="" /></label>
-      <ul>
-        <li><a class="hideOnMobile"  href="#">HOME</a></li>
-        <li><a class="hideOnMobile" href="#">about</a></li>
-        <li><a  class="hideOnMobile" href="#">Contact</a></li>
-        <li><a class="hideOnMobile " href="#">Log Out</a></li>
-        <li class="menu-button" onclick=showSidebar()><a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
-      </ul>
-    </nav>
-</section>
+<nav class="sidebar">
+    <ul>
+        <li><a class="active" href="#">HOME</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li class="dropdown"><a class="join-us-button" href="#"><img id="profile-picture" src="/user.png" alt="Pfp" /></a>
+            <div class="dropdown-content">
+
+                <a href="modal.html"><button type="button" class="dropdown-btn">My Account</button></a>
+
+                <a href="#"><button type="button" class="dropdown-btn">Log Out</button></a>
+            </div>
+        </li>
+        <li onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+    </ul>
+</nav>
+
+<nav>
+    <label class="logo"><img src="edulink0.png" alt="Logo" /></label>
+    <ul>
+        <li><a class="hideOnMobile active" href="#">HOME</a></li>
+        <li><a class="hideOnMobile" href="#">About</a></li>
+        <li><a class="hideOnMobile" href="#">Contact</a></li>
+        <li class="dropdown"><a class="hideOnMobile join-us-button" href="#"><img id="profile-picture" src="user.png" alt="Pfp" /></a>
+            <div class="dropdown-content">
+                <a href="modal.html"><button type="button" class="dropdown-btn">My Account</button></a>
+                <a href="#"><button type="button" class="dropdown-btn">Log Out</button></a>
+            </div>
+        </li>
+        <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+    </ul>
+</nav>
+
+ 
 
 <section class="Tliste">
 
-    <h1>Welcome, School's name !</h1>
-    <p>Your school, your rules: Manage Schedules, Add Teachers, Shape Success!</p>
+    <h1>Welcome, School's name ! </h1>
+    <p>Your school, your rules: Manage Schedules, Add Teachers, Shape Success! </p>
     <hr>
-  <div class="info-c">
-      <div class="button-content">
-        <button class="content-a">SUBJECTS ></button>
-        <a href="/schedule.html"><button class="content-b">SCHEDULE ></button></a>
+    <div class="content-container">
+      
+        <div class="info-c">
+            <div class="button-content">
+        <a href="/report.html"><button class="content-a"><span>REPORT ></span></button></a>
+        <a href="/schedule-s.html"><button class="content-b"><span>SCHEDULE ></span></button></a>
     </div>
     <div class="button-content">
-        <button class="content-c">TEACHERS ></button>
-        <button class="content-d">REVIEWS ></button>
+        <a href="/teachers section/index.html"><button class="content-c"><span>TEACHERS ></span></button></a>
+        <button class="content-d"><span>COMMENTS ></span></button>
     </div>
-    </div>    
+        </div>
+        <div class="right-side">
+                <img src="/grad.gif" class="animation" >
+            </div>
     </div>
 
 
