--- a/teachers section/index.html
+++ b/teachers section/index.html
@@ -12,28 +12,38 @@
 </head>
 <body>
 
-<section>
-    <nav class="sidebar">
-      <ul>
-        <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
-        <li><a  href="#">HOME</a></li>
-        <li><a href="#">about</a></li>
+<nav class="sidebar">
+    <ul>
+        <li><a class="active" href="#">HOME</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a class="" href="#">Log Out</a></li>
-      </ul>
-    </nav>
-    <nav>
+        <li class="dropdown"><a class="join-us-button" href="#"><img id="profile-picture" src="/user.png" alt="Pfp" /></a>
+            <div class="dropdown-content">
 
-      <label class="logo"><img src="edulink3.png" alt="" /></label>
-      <ul>
-        <li><a class="hideOnMobile"  href="#">HOME</a></li>
-        <li><a class="hideOnMobile" href="#">about</a></li>
-        <li><a  class="hideOnMobile" href="#">Contact</a></li>
-        <li><a class="hideOnMobile " href="#">Log Out</a></li>
-        <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
-      </ul>
-    </nav>
-</section>
+                <a href="modal.html"><button type="button" class="dropdown-btn">My Account</button></a>
+
+                <a href="#"><button type="button" class="dropdown-btn">Log Out</button></a>
+            </div>
+        </li>
+        <li onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+    </ul>
+</nav>
+
+<nav>
+    <label class="logo"><img src="edulink0.png" alt="Logo" /></label>
+    <ul>
+        <li><a class="hideOnMobile active" href="#">HOME</a></li>
+        <li><a class="hideOnMobile" href="#">About</a></li>
+        <li><a class="hideOnMobile" href="#">Contact</a></li>
+        <li class="dropdown"><a class="hideOnMobile join-us-button" href="#"><img id="profile-picture" src="user.png" alt="Pfp" /></a>
+            <div class="dropdown-content">
+                <a href="modal.html"><button type="button" class="dropdown-btn">My Account</button></a>
+                <a href="#"><button type="button" class="dropdown-btn">Log Out</button></a>
+            </div>
+        </li>
+        <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+    </ul>
+</nav>
 
 <section class="Tliste">
 
@@ -41,37 +51,33 @@
         <p>Discover Our Educators</p>
         <hr>
 
-  <div class="teachers"  id="myList1">
-      <ul>
-        <li ><img src="iconface.jpg" alt=""></li>
-        <li >Subject</li>
-        <li >Experience</li>
-        <li >Age</li>
-        <li >Teacher's full name</li>
-        <li class="teacher"><div class="star-rating" data-rating="0">
-    <span class="star" data-value="1">&#9733;</span>
-    <span class="star" data-value="2">&#9733;</span>
-    <span class="star" data-value="3">&#9733;</span>
-    <span class="star" data-value="4">&#9733;</span>
-    <span class="star" data-value="5">&#9733;</span>
-  </div></li>
-   </ul>
-	</div>
+  <div class="teachers" id="myList1">
+    <ul>
+      <li><img src="iconface.jpg" alt=""></li>
+      <li>Subject</li>
+      <li>Experience</li>
+      <li>Age</li>
+      <li>Teacher's full name</li>
+      <li class="teacher">
+        <p class="rating" data-rating="4"></p>
+      </li>
+      </li>
+    </ul>
+  </div>
 
-  <div class="teachers"  id="myList2">
-      <ul>
-        <li ><img src="iconface.jpg" alt=""></li>
-        <li >Subject</li>
-        <li >Experience</li>
-        <li >Age</li>
-        <li >Teacher's full name</li>
-        <li class="teacher"><div class="star-rating" data-rating="0">
-    <span class="star" data-value="1">&#9733;</span>
-    <span class="star" data-value="2">&#9733;</span>
-    <span class="star" data-value="3">&#9733;</span>
-    <span class="star" data-value="4">&#9733;</span>
-    <span class="star" data-value="5">&#9733;</span>
-  </div></li>
+  <div class="teachers" id="myList2">
+    <ul>
+      <li><img src="iconface.jpg" alt=""></li>
+      <li>Subject</li>
+      <li>Experience</li>
+      <li>Age</li>
+      <li>Teacher's full name</li>
+      <li class="teacher">
+        <p class="rating" data-rating="3"></p>
+      </li>
+      </li>
+    </ul>
+  </div>
   
           <!--<p class="rating" data-rating="2"></p> -->
         
@@ -79,22 +85,20 @@
    </ul>
 	</div>
 
-  <div class="teachers"  id="myList3">
-      <ul>
-        <li ><img src="iconface.jpg" alt=""></li>
-        <li >Subject</li>
-        <li >Experience</li>
-        <li >Age</li>
-        <li >Teacher's full name</li>
-        <li class="teacher"><div class="star-rating" data-rating="0">
-    <span class="star" data-value="1">&#9733;</span>
-    <span class="star" data-value="2">&#9733;</span>
-    <span class="star" data-value="3">&#9733;</span>
-    <span class="star" data-value="4">&#9733;</span>
-    <span class="star" data-value="5">&#9733;</span>
-  </div></li>
-   </ul>
-	</div>
+<div class="teachers" id="myList3">
+    <ul>
+      <li><img src="iconface.jpg" alt=""></li>
+      <li>Subject</li>
+      <li>Experience</li>
+      <li>Age</li>
+      <li>Teacher's full name</li>
+      <li class="teacher">
+        <p class="rating" data-rating="5"></p>
+      </li>
+      </li>
+    </ul>
+  </div>
+
 <svg width="100%" height="200" viewBox="0 0 1480 200" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 199.5C0 199.5 151.343 149.991 693.719 149.991C1236.09 149.991 1475.02 0 1475.02 0V200H0V199.5Z" fill="#262653 " fill-opacity="0.05"/>
     <path d="M4.98315 199.568C4.98315 199.568 156.326 149.82 698.702 149.82C1241.08 149.82 1480 39 1480 39V200H4.98315V199.568Z" fill="#262653 " fill-opacity="0.15"/>
@@ -119,7 +123,6 @@
                 
                 <img src="edulinklogo.png" alt="" />
                 <h4>your ultimate guide for educational excellence!</h4>
-                <button class="button-footer">JOIN US  ></button>
               </ul></div>
               <div> <div class="icons">
                 <h3>CONTACT US</h3>
