--- a/student_regist.html
+++ b/student_regist.html
@@ -34,7 +34,7 @@
     <script>
         function dismissModal() {
             // Redirect to student_search.html
-            window.location.href = 'student_search.html';
+            window.location.href = '/views/student_search.html';
         }
 
         document.getElementById('registration-form').addEventListener('submit', function(event) {
