--- a/school-login.html
+++ b/school-login.html
@@ -29,20 +29,18 @@
         <h1>School Login</h1>
         <form id="registration-form">
             <div class="form-group">
-                <label for="username_or_email">Username or Email:</label>
+                <label for="username_or_email">Email:</label>
                 <input type="text" id="username_or_email" name="username_or_email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="button" id="">Login</button>
+            <button type="button" id="loginButton">Login</button>
         </form>
     </div>
 
    
-
-    <script src="script.js"></script>
     <script>
         function showSidebar() {
             const sidebar = document.querySelector('.sidebar');
@@ -53,6 +51,33 @@
             const sidebar = document.querySelector('.sidebar');
             sidebar.style.display = 'none';
         }
+
+    
+    const emailInput = document.getElementById('username_or_email');
+    const passwordInput = document.getElementById('password');
+    const loginBtn = document.getElementById('loginButton');
+
+    // Login handler function
+    loginBtn.addEventListener('click', () => {
+
+        const email = emailInput.value;
+        const password = passwordInput.value;
+
+      fetch(`http://127.0.0.1:3000/schoolsignin?email_sch=${email}&password_sch=${password}`, {
+        method: 'GET'
+      })
+      .then(response => response.json())
+      .then(response => {
+        console.log(response)
+        console.log('Login successful:');
+        window.location.href = '/Edulink_website/school - Copie/index.html'; // Redirect to school dashboard
+    })
+    .catch(error => {
+        console.error('Login failed:', response.statusText);
+        alert('Invalid email or password');
+    });
+
+});
 
        
     </script>
