rbat l commets ta3 student we teacher li yokhorjo l student

--- a/projet-p/ecole-profile.html
+++ b/projet-p/ecole-profile.html
@@ -97,8 +97,8 @@
         <a href="/schedule-s.html"><button class="content-b"><span>SCHEDULE ></span></button></a>
     </div>
     <div class="button-content">
-        <a href="/teachers section/index.html"><button class="content-c"><span>TEACHERS ></span></button></a>
-        <button class="content-d"><span>COMMENTS ></span></button>
+        <a href="/student/teachers?id=<%= schoolId %>"><button class="content-c"><span>TEACHERS ></span></button></a>
+        <a href="/comments?schoolId=<%= schoolId %>"><button class="content-d"><span>COMMENTS ></span></button></a>
     </div>
     </div>    
     </div>
