the updated version of edulink

--- a/projet-p/ecole-profile.html
+++ b/projet-p/ecole-profile.html
@@ -137,10 +137,10 @@
         <div><h3>CONTACT US</h3>
            <div class="icons">
        
-          <i class="fab fa-facebook" ></i>
-          <i class="fab fa-twitter" ></i>
-          <i class="fab fa-instagram" ></i>
-          <i class="fab fa-linkedin" ></i>
+          <<a href="https://www.facebook.com/profile.php?id=61558729667955"><i class="fab fa-facebook" id="facebook-icon"></i></a>
+          <a href="https://www.linkedin.com/in/edulink-website-0731a4307/"><i class="fab fa-linkedin" id="linkedin-icon"></i></a>
+          <a href="https://www.instagram.com/edulink_website/"><i class="fab fa-instagram" id="instagram-icon"></i></a>
+          <a href="mailto:edulink.website@gmail.com"><i class="fa fa-envelope" id="email-icon"></i></a>
          </div></div>
  </footer>
  
