--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@ setInterval(function(){
       </ul></div>
       <div> <div class="icons">
         <h3>CONTACT US</h3>
-        <i class="fab fa-facebook" id="facebook-icon"></i>
-        <i class="fab fa-linkedin" id="linkedin-icon"></i>
-        <i class="fab fa-instagram" id="instagram-icon"></i>
-        <i class="fa fa-envelope" id="email-icon"></i>
+        <a href="https://www.facebook.com/profile.php?id=61558729667955"><i class="fab fa-facebook" id="facebook-icon"></i></a>
+        <a href="https://www.linkedin.com/in/edulink-website-0731a4307/"><i class="fab fa-linkedin" id="linkedin-icon"></i></a>
+        <a href="https://www.instagram.com/edulink_website/"><i class="fab fa-instagram" id="instagram-icon"></i></a>
+        <a href="mailto:edulink.website@gmail.com"><i class="fa fa-envelope" id="email-icon"></i></a>
        </div></div>
 </footer>
 
