--- a/teachers section/index.html
+++ b/teachers section/index.html
@@ -20,7 +20,7 @@
         <li class="dropdown"><a class="join-us-button" href="#"><img id="profile-picture" src="/user.png" alt="Pfp" /></a>
             <div class="dropdown-content">
 
-                <a href="/modal.html"><button type="button" class="dropdown-btn">My Account</button></a>
+                <a href="/school - Copie/profil.html"><button type="button" class="dropdown-btn">My Account</button></a>
 
                 <a href="#"><button type="button" class="dropdown-btn">Log Out</button></a>
             </div>
@@ -37,7 +37,7 @@
         <li><a class="contact-link hideOnMobile" href="#">Contact</a></li>
         <li class="dropdown"><a class="hideOnMobile join-us-button" href="#"><img id="profile-picture" src="user.png" alt="Pfp" /></a>
             <div class="dropdown-content">
-                <a href="/modal.html"><button type="button" class="dropdown-btn">My Account</button></a>
+                <a href="/school - Copie/profil.html"><button type="button" class="dropdown-btn">My Account</button></a>
                 <a href="#"><button type="button" class="dropdown-btn">Log Out</button></a>
             </div>
         </li>
@@ -113,10 +113,10 @@
   <div class="divs-c-l"> 
       <h3>OUR SERVICES
       </h3><ul>           
-          <li><a href="#" id="aboutus-link">About us</a></li>
-          <li><a href="#" id="help-link">Help</a></li>
-          <li><a href="#" id="policy-link">Privacy Policy</a></li>
-          <li><a href="#" id="term-link">Term Of Use</a></li>
+        <li><a href="/about.html#about-us" id="aboutus-link">About us</a></li>
+        <li><a href="/about.html#help" id="help-link">Help</a></li>
+        <li><a href="/about.html#privacy-policy" id="policy-link">Privacy Policy</a></li>
+        <li><a href="/about.html#term-use" id="term-link">Term Of Use</a></li>
       </div>
 
    <div class="divs-c-s"> 
@@ -127,15 +127,15 @@
     </ul></div>
     <div> <div class="icons">
       <h3>CONTACT US</h3>
-      <i class="fab fa-facebook" id="facebook-icon"></i>
-      <i class="fab fa-linkedin" id="linkedin-icon"></i>
-      <i class="fab fa-instagram" id="instagram-icon"></i>
-      <i class="fa fa-envelope" id="email-icon"></i>
+      <a href="https://www.facebook.com/profile.php?id=61558729667955"><i class="fab fa-facebook" id="facebook-icon"></i></a>
+        <a href="https://www.linkedin.com/in/edulink-website-0731a4307/"><i class="fab fa-linkedin" id="linkedin-icon"></i></a>
+        <a href="https://www.instagram.com/edulink_website/"><i class="fab fa-instagram" id="instagram-icon"></i></a>
+        <a href="mailto:edulink.website@gmail.com"><i class="fa fa-envelope" id="email-icon"></i></a>
      </div>
     </div>
 </footer>
   
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 
 </body>
 </html>
