--- a/modal.html
+++ b/modal.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Account</title>
-    <script src="modal.js" defer></script>
-    <link rel="stylesheet" href="modal.css"> <!-- Link to your CSS file -->
+    <script src="./modal.js" defer></script>
+    <link rel="stylesheet" href="./modal.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <div id="myModal" class="modal">
@@ -14,7 +14,7 @@
             <h2>My Account</h2>
             <form>
                 <div id="profile-picture-container">
-                    <img id="profile-picture-preview" class="profile-picture" src="#" alt="Profile Picture Preview"/>
+                    <img id="profile-picture-preview" class="profile-picture" src="/Edulink_website/school - Copie/avatar.jpg" alt="Profile Picture Preview"/>
                     <input type="file" id="profile-picture" style="display: none;">
                     <label for="profile-picture" id="profile-picture-label">Choose Picture</label>
                 </div>
