--- a/projet-p/schedule.html
+++ b/projet-p/schedule.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>schedule</title>
-    <link rel="stylesheet" href="schedule.css" />
+    <link rel="stylesheet" href="./schedule.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -24,7 +24,7 @@
     </nav>
     <nav>
 
-      <label class="logo"><img src="/edulink0.png" alt="" /></label>
+      <label class="logo"><img src="./edulink0.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile" class="active" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -66,17 +66,17 @@
 
          <div class="divs-c-s"> 
             
-            <img src="edulinklogo.png" alt="" />
+            <img src="./edulinklogo.png" alt="" />
             <h4>your ultimate guide for educational excellence!</h4>
             <button class="button-footer">JOIN US</button>
           </ul></div>
           <div> 
             <h3>CONTACT US</h3>
             <div class="icons">    
-          <i class="fab fa-facebook" ></i>
-         <i class="fab fa-twitter" ></i>
-         <i class="fab fa-instagram" ></i>
-          <i class="fa fa-envelope" ></i>
+              <a href="https://www.facebook.com/profile.php?id=61558729667955"><i class="fab fa-facebook" id="facebook-icon"></i></a>
+              <a href="https://www.linkedin.com/in/edulink-website-0731a4307/"><i class="fab fa-linkedin" id="linkedin-icon"></i></a>
+              <a href="https://www.instagram.com/edulink_website/"><i class="fab fa-instagram" id="instagram-icon"></i></a>
+              <a href="mailto:edulink.website@gmail.com"><i class="fa fa-envelope" id="email-icon"></i></a>
            </div></div>
    </footer>
     <script>
