--- a/projet-p/nav-bar.html
+++ b/projet-p/nav-bar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nav-bar</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Edulink_website/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -24,7 +24,7 @@
     </nav>
     <nav>
 
-      <label class="logo"><img src="logo.gnj" alt="" />LOGO</label>
+      <label class="logo"><img src="./logo.png" alt="" />LOGO</label>
       <ul>
         <li><a class="hideOnMobile" class="active" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
