--- a/rating stars/index.html
+++ b/rating stars/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Edulink_website/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,6 +14,6 @@
   <span class="star" data-value="4">&#9733;</span>
   <span class="star" data-value="5">&#9733;</span>
 </div>
-<script src="script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
