--- a/signin/index.html
+++ b/signin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login page / animated</title>
-    <link rel="stylesheet" href="/signin/sign.css" />
+    <link rel="stylesheet" href="sign.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <nav>
-      <label class="logo"><img src="/signin/edulink3.png" alt="" /></label>
+      <label class="logo"><img src="./edulink3.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile"  href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -97,7 +97,7 @@
       </div>
     </div>
   
-    <script src="/signin/script.js">
+    <script src="script.js">
 
   const signupForm = document.getElementById('signup-form');
   const loginForm = document.getElementById('login-form');
